--- a/page2.html
+++ b/page2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Page 2</h1>
+        <h1>Compton Gardens</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
