--- a/page2.html
+++ b/page2.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="page2.html">Page 2</a></li>
+                <li><a href="page2.html">Services</a></li>
             </ul>
         </nav>
     </header>
