--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <header>
-        <h1>Compton Gardens</h1>
+        <h1>Compton Gardens - Home</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="page2.html">Services</a></li>
+                <li><a href="comptongardens/">Home</a></li>
+                <li><a href="comptongardens/about/">About</a></li>
+                <li><a href="comptongardens/services/">Services</a></li> 
             </ul>
         </nav>
     </header>
