--- a/services/index.html
+++ b/services/index.html
@@ -11,9 +11,9 @@
         <h1>Compton Gardens - Services</h1>
         <nav>
             <ul>
-                <li><a href="comptongardens/">Home</a></li>
-                <li><a href="comptongardens/about/">About</a></li>
-                <li><a href="comptongardens/services/">Services</a></li> 
+                <li><a href="/">Home</a></li>
+                <li><a href="/about/">About</a></li>
+                <li><a href="/services/">Services</a></li> 
             </ul>
         </nav>
     </header>
