--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
         <h1>Compton Gardens - Home</h1>
         <nav>
             <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/about/">About</a></li>
-                <li><a href="/services/">Services</a></li> 
+                <li><a href="/comptongardens/">Home</a></li>
+                <li><a href="/comptongardens/about/">About</a></li>
+                <li><a href="/comptongardens/services/">Services</a></li>
+
             </ul>
         </nav>
     </header>
