--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple Website</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="comptongardens/css/style.css">
 </head>
 <body>
     <header>
